Archive2/fc/b9aa60ee6f2c15/output
main.cpp:6:48: error: 'T' was not declared in this scope
 std::string CharArrayToString(std::array<char, T> &array)
                                                ^
main.cpp:6:49: error: template argument 2 is invalid
 std::string CharArrayToString(std::array<char, T> &array)
                                                 ^
main.cpp: In function 'std::string CharArrayToString(int&)':
main.cpp:8:40: error: no matching function for call to 'begin(int&)'
     return std::string(std::begin(array), std::end(array));
                                        ^
main.cpp:8:40: note: candidates are:
In file included from /usr/include/c++/4.8/string:51:0,
                 from /usr/include/c++/4.8/bits/locale_classes.h:40,
                 from /usr/include/c++/4.8/bits/ios_base.h:41,
                 from /usr/include/c++/4.8/ios:42,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/range_access.h:48:5: note: template<class _Container> decltype (__cont.begin()) std::begin(_Container&)
     begin(_Container& __cont) -> decltype(__cont.begin())
     ^
/usr/include/c++/4.8/bits/range_access.h:48:5: note:   template argument deduction/substitution failed:
/usr/include/c++/4.8/bits/range_access.h: In substitution of 'template<class _Container> decltype (__cont.begin()) std::begin(_Container&) [with _Container = int]':
main.cpp:8:40:   required from here
/usr/include/c++/4.8/bits/range_access.h:48:5: error: request for member 'begin' in '__cont', which is of non-class type 'int'
/usr/include/c++/4.8/bits/range_access.h:58:5: note: template<class _Container> decltype (__cont.begin()) std::begin(const _Container&)
     begin(const _Container& __cont) -> decltype(__cont.begin())
     ^
/usr/include/c++/4.8/bits/range_access.h:58:5: note:   template argument deduction/substitution failed:
/usr/include/c++/4.8/bits/range_access.h: In substitution of 'template<class _Container> decltype (__cont.begin()) std::begin(const _Container&) [with _Container = int]':
main.cpp:8:40:   required from here
/usr/include/c++/4.8/bits/range_access.h:58:5: error: request for member 'begin' in '__cont', which is of non-class type 'const int'
/usr/include/c++/4.8/bits/range_access.h:87:5: note: template<class _Tp, long unsigned int _Nm> _Tp* std::begin(_Tp (&)[_Nm])
     begin(_Tp (&__arr)[_Nm])
     ^
/usr/include/c++/4.8/bits/range_access.h:87:5: note:   template argument deduction/substitution failed:
main.cpp:8:40: note:   mismatched types '_Tp [_Nm]' and 'int'
     return std::string(std::begin(array), std::end(array));
                                        ^
In file included from /usr/include/c++/4.8/bits/basic_string.h:42:0,
                 from /usr/include/c++/4.8/string:52,
                 from /usr/include/c++/4.8/bits/locale_classes.h:40,
                 from /usr/include/c++/4.8/bits/ios_base.h:41,
                 from /usr/include/c++/4.8/ios:42,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from main.cpp:1:
/usr/include/c++/4.8/initializer_list:89:5: note: template<class _Tp> constexpr const _Tp* std::begin(std::initializer_list<_Tp>)
     begin(initializer_list<_Tp> __ils) noexcept
     ^
/usr/include/c++/4.8/initializer_list:89:5: note:   template argument deduction/substitution failed:
main.cpp:8:40: note:   mismatched types 'std::initializer_list<_Tp>' and 'int'
     return std::string(std::begin(array), std::end(array));
                                        ^
main.cpp:8:57: error: no matching function for call to 'end(int&)'
     return std::string(std::begin(array), std::end(array));
                                                         ^
main.cpp:8:57: note: candidates are:
In file included from /usr/include/c++/4.8/string:51:0,
                 from /usr/include/c++/4.8/bits/locale_classes.h:40,
                 from /usr/include/c++/4.8/bits/ios_base.h:41,
                 from /usr/include/c++/4.8/ios:42,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/range_access.h:68:5: note: template<class _Container> decltype (__cont.end()) std::end(_Container&)
     end(_Container& __cont) -> decltype(__cont.end())
     ^
/usr/include/c++/4.8/bits/range_access.h:68:5: note:   template argument deduction/substitution failed:
/usr/include/c++/4.8/bits/range_access.h: In substitution of 'template<class _Container> decltype (__cont.end()) std::end(_Container&) [with _Container = int]':
main.cpp:8:57:   required from here
/usr/include/c++/4.8/bits/range_access.h:68:5: error: request for member 'end' in '__cont', which is of non-class type 'int'
/usr/include/c++/4.8/bits/range_access.h:78:5: note: template<class _Container> decltype (__cont.end()) std::end(const _Container&)
     end(const _Container& __cont) -> decltype(__cont.end())
     ^
/usr/include/c++/4.8/bits/range_access.h:78:5: note:   template argument deduction/substitution failed:
/usr/include/c++/4.8/bits/range_access.h: In substitution of 'template<class _Container> decltype (__cont.end()) std::end(const _Container&) [with _Container = int]':
main.cpp:8:57:   required from here
/usr/include/c++/4.8/bits/range_access.h:78:5: error: request for member 'end' in '__cont', which is of non-class type 'const int'
/usr/include/c++/4.8/bits/range_access.h:97:5: note: template<class _Tp, long unsigned int _Nm> _Tp* std::end(_Tp (&)[_Nm])
     end(_Tp (&__arr)[_Nm])
     ^
/usr/include/c++/4.8/bits/range_access.h:97:5: note:   template argument deduction/substitution failed:
main.cpp:8:57: note:   mismatched types '_Tp [_Nm]' and 'int'
     return std::string(std::begin(array), std::end(array));
                                                         ^
In file included from /usr/include/c++/4.8/bits/basic_string.h:42:0,
                 from /usr/include/c++/4.8/string:52,
                 from /usr/include/c++/4.8/bits/locale_classes.h:40,
                 from /usr/include/c++/4.8/bits/ios_base.h:41,
                 from /usr/include/c++/4.8/ios:42,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from main.cpp:1:
/usr/include/c++/4.8/initializer_list:99:5: note: template<class _Tp> constexpr const _Tp* std::end(std::initializer_list<_Tp>)
     end(initializer_list<_Tp> __ils) noexcept
     ^
/usr/include/c++/4.8/initializer_list:99:5: note:   template argument deduction/substitution failed:
main.cpp:8:57: note:   mismatched types 'std::initializer_list<_Tp>' and 'int'
     return std::string(std::begin(array), std::end(array));
                                                         ^
main.cpp: In function 'int main()':
main.cpp:14:24: error: no matching function for call to 'std::array<char, 10ul>::fill(const char [9])'
    test.fill("Huppelke");
                        ^
main.cpp:14:24: note: candidate is:
In file included from main.cpp:4:0:
/usr/include/c++/4.8/array:103:7: note: void std::array<_Tp, _Nm>::fill(const value_type&) [with _Tp = char; long unsigned int _Nm = 10ul; std::array<_Tp, _Nm>::value_type = char] <near match>
       fill(const value_type& __u)
       ^
/usr/include/c++/4.8/array:103:7: note:   no known conversion for argument 1 from 'const char [9]' to 'const value_type& {aka const char&}'
main.cpp:16:4: error: 'cout' was not declared in this scope
    cout << CharArrayToString(&array);
    ^
main.cpp:16:4: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/4.8/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp:16:31: error: 'array' was not declared in this scope
    cout << CharArrayToString(&array);
                               ^
main.cpp:16:31: note: suggested alternative:
In file included from main.cpp:4:0:
/usr/include/c++/4.8/array:81:12: note:   'std::array'
     struct array
            ^
main.cpp: In function 'std::string CharArrayToString(int&)':
main.cpp:9:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
